Fixed nav bar causing horizontal scroll bars when a vertical scroll bar was present

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -27,8 +27,6 @@ header.NavBar {
     display: flex;
     margin-bottom: 0.2rem;
     height: navbar-height;
-    width: 100vw;
-    max-width: 100vw;
     user-select: none;
     themed background-color navbar-background-color
     box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.16);
